# toqito-bench

./: .pre-commit-config.yaml  METHODOLOGY.md  Makefile  README.md  abc.m  pyproject.toml
.github/workflows/: benchmark.yml  ketjl.yml  matlab.yml
benchmarks/: test.py  test_ketjl.jl
scripts/: benchmark_ketjl.jl  benchmark_qutipy.py  benchmark_toqito.py
setup/: PartialTraceBenchmarks.m  run_qetlab.m  test.jl  test.py  test_ketjl.jl  test_matlab.m  test_matlab.py  test_matlab_engine.py  test_qetlab.m  test_qutipy.py  test_toqito.py
