[project]
name = "toqito-bench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.poetry.group.dev]        
optional = false                

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0"
ruff = "0.12.0"
pytest = "^8.0"